--- a/cvm-agent/Cargo.toml
+++ b/cvm-agent/Cargo.toml
@@ -14,4 +14,5 @@ tempfile = "3.20"
 tokio = { version =  "1.46", features = ["macros", "process", "rt", "signal"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
-validator = { version = "0.20", features = ["derive"] }
+
+cvm-agent-models = { path = "../crates/cvm-agent-models" }
