--- a/nilcc-api/package.json
+++ b/nilcc-api/package.json
@@ -47,6 +47,7 @@
     "temporal-polyfill": "^0.3.0",
     "tsx": "^4.19.4",
     "typeorm": "^0.3.24",
+    "uuid": "^11.1.0",
     "yaml": "^2.8.0",
     "zod": "^3.25.13",
     "zod-openapi": "^4.2.4",
