--- a/nilcc-agent/Cargo.toml
+++ b/nilcc-agent/Cargo.toml
@@ -18,7 +18,6 @@ metrics = "0.24"
 metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener"] }
 once_cell = "1.20"
 qapi = { version = "0.15", features = ["qmp", "async-tokio-all"] }
-regex = "1.11"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 rustls-acme = { version = "0.14", features = ["axum"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -34,13 +33,13 @@ tera = { version = "1", default-features = false }
 thiserror = "2"
 tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "process", "time", "fs", "signal"] }
 tower = "0.5"
-convert_case = "0.8"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
 uuid = { version = "1.17", features = ["serde", "v4"] }
 validator = { version = "0.20", features = ["derive"] }
 
 cvm-agent-models = { path = "../crates/cvm-agent-models" }
+nilcc-agent-models = { path = "../crates/nilcc-agent-models" }
 
 [dev-dependencies]
 mockall = "0.13"
