--- a/nilcc-agent-cli/Cargo.toml
+++ b/nilcc-agent-cli/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2024"
 anyhow = "1"
 clap = { version = "4.5", features = ["derive", "env"] }
 serde = "1.0"
+serde_json = "1.0"
 reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
 thiserror = "2.0"
 uuid = { version = "1.17", features = ["v4"] }
 
 nilcc-agent-models = { path = "../crates/nilcc-agent-models" }
+cvm-agent-models = { path = "../crates/cvm-agent-models" }
