--- a/nilcc-agent-cli/Cargo.toml
+++ b/nilcc-agent-cli/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = "1"
 clap = { version = "4.5", features = ["derive", "env"] }
 serde = "1.0"
 serde_json = "1.0"
-reqwest = { version = "0.12", default-features = false, features = ["blocking", "default-tls", "json"] }
+reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
 thiserror = "2.0"
 uuid = { version = "1.17", features = ["v4"] }
 
