--- a/nilcc-agent/Cargo.toml
+++ b/nilcc-agent/Cargo.toml
@@ -11,6 +11,7 @@ axum-server = "0.7"
 axum-valid = "0.24"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["derive", "env"] }
+docker-compose-types = "0.19.0"
 futures-core = "0.3"
 hex = { version = "0.4", features = ["serde"] }
 humantime = { version = "2.2"}
