--- a/cvm-agent/Cargo.toml
+++ b/cvm-agent/Cargo.toml
@@ -12,8 +12,10 @@ futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tempfile = "3.20"
-tokio = { version =  "1.46", features = ["macros", "process", "rt", "signal"] }
+tokio = { version =  "1.46", features = ["fs", "macros", "process", "rt", "signal"] }
+tokio-stream = { version = "0.1", features = ["io-util"]}
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-appender = "0.2"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 
 cvm-agent-models = { path = "../crates/cvm-agent-models" }
