--- a/nilcc-agent-cli/Cargo.toml
+++ b/nilcc-agent-cli/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ansi_term = "0.12"
 anyhow = "1"
 clap = { version = "4.5", features = ["derive", "env"] }
 serde = "1.0"
