--- a/cvm-agent/Cargo.toml
+++ b/cvm-agent/Cargo.toml
@@ -11,7 +11,7 @@ clap = { version = "4.5", features = ["derive", "string"] }
 futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sysinfo = { version = "0.36", default-features = false, features = ["system"] }
+sysinfo = { version = "0.36", default-features = false, features = ["system", "disk"] }
 tempfile = "3.20"
 tokio = { version =  "1.46", features = ["fs", "macros", "process", "rt", "signal"] }
 tokio-stream = { version = "0.1", features = ["io-util"]}
