--- a/nilcc-api/.env.test
+++ b/nilcc-api/.env.test
@@ -4,6 +4,7 @@ APP_ENABLED_FEATURES=openapi,prometheus-metrics,migrations,response-validation,l
 APP_LOG_LEVEL=debug
 APP_METRICS_PORT=9091
 APP_HTTP_API_PORT=8080
+APP_ADMIN_API_KEY=admin-api-key
 APP_METAL_INSTANCE_API_KEY=your-metal-instance-api-key
 APP_USER_API_KEY=your-user-api-key
 APP_WORKLOADS_DNS_ZONE=public.localhost
