--- a/nilcc-api/.env.test
+++ b/nilcc-api/.env.test
@@ -1,6 +1,6 @@
 APP_DB_URI=postgres://postgres:postgres@localhost:35432/postgres
 APP_LOCALSTACK_URI=http://localhost:4566
-APP_ENABLED_FEATURES=openapi,prometheus-metrics,migrations,response-validation,localstack,pretty-logs,http-error-stacktrace
+APP_ENABLED_FEATURES=openapi,prometheus-metrics,response-validation,localstack,pretty-logs,http-error-stacktrace,auto-migrations
 APP_LOG_LEVEL=debug
 APP_METRICS_PORT=9091
 APP_HTTP_API_PORT=8080
