--- a/nilcc-verifier/Cargo.toml
+++ b/nilcc-verifier/Cargo.toml
@@ -17,7 +17,7 @@ sev = { version = "6.1", default-features = false, features = ["openssl", "snp"]
 thiserror = "2.0"
 tokio = { version = "1.45", features = ["rt"] }
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 x509-parser = { version = "0.17.0", features = ["verify"] } 
 
 [dev-dependencies]
