--- a/nilcc-agent/Cargo.toml
+++ b/nilcc-agent/Cargo.toml
@@ -10,7 +10,7 @@ axum = { version = "0.8", features = ["json"] }
 axum-server = "0.7"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["derive", "env"] }
-docker-compose-types = "0.19.0"
+docker-compose-types = { version = "0.19.0", default-features = false, features = ["yaml"] }
 futures-core = "0.3"
 hex = { version = "0.4", features = ["serde"] }
 humantime = { version = "2.2"}
