--- a/nilcc-attester/Cargo.toml
+++ b/nilcc-attester/Cargo.toml
@@ -13,6 +13,7 @@ hex = { version = "0.4", features = ["serde"] }
 num_cpus = "1.16"
 rand = "0.9"
 serde = { version = "1.0", features = ["derive"] }
+serde_with = { version = "3.14", default-features = false, features = ["hex", "macros"] }
 sev = { version = "6.1", default-features = false, features = ["snp"] }
 thiserror = "2.0"
 tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "process", "signal"] }
