--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -42,10 +42,10 @@ jobs:
         run: artifacts/qemu/build.sh
 
       - name: Build guest cpu iso
-        run: artifacts/autoinstall_ubuntu/build.sh guest cpu
+        run: artifacts/autoinstall_ubuntu/build.sh cpu
 
       - name: Build guest gpu iso
-        run: artifacts/autoinstall_ubuntu/build.sh guest gpu
+        run: artifacts/autoinstall_ubuntu/build.sh gpu
 
       - name: Build initrd
         run: artifacts/initramfs/build.sh
