feat: perform a single attestation including TLS pubkey on start

--- a/cvm-agent/resources/docker-compose.yaml
+++ b/cvm-agent/resources/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       APP__SERVER__BIND_ENDPOINT: "0.0.0.0:80"
       APP__NILCC_VERSION: ${NILCC_VERSION}
       APP__VM_TYPE: ${NILCC_VM_TYPE}
+      APP__ATTESTATION_DOMAIN: ${NILCC_DOMAIN}
       NO_COLOR: 1
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/health"]
