--- a/nilcc-attester/Cargo.toml
+++ b/nilcc-attester/Cargo.toml
@@ -12,11 +12,14 @@ config = { version = "0.15", default-features = false, features = ["yaml"] }
 hex = { version = "0.4", features = ["serde"] }
 num_cpus = "1.16"
 rand = "0.9"
-serde = { version = "1.0", features = ["derive"] }
+reqwest = { version = "0.12", features = ["rustls-tls"] }
+serde = { version = "1.0", features = ["rc", "derive"] }
 serde_with = { version = "3.14", default-features = false, features = ["hex", "macros"] }
 sev = { version = "6.1", default-features = false, features = ["snp"] }
+sha2 = "0.10"
 thiserror = "2.0"
 tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "process", "signal"] }
 tower-http = { version = "0.6", features = ["cors"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
+x509-parser = "0.18"
