--- a/nilcc-verifier/Cargo.toml
+++ b/nilcc-verifier/Cargo.toml
@@ -9,11 +9,11 @@ bincode = "1.3"
 clap = { version = "4.5", features = ["derive", "string", "env"] }
 hex = { version = "0.4", features = ["serde"] }
 openssl = { version = "^0.10", features = ["vendored"] }
-rand = "0.9"
 reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sev = { version = "6.1", default-features = false, features = ["openssl", "snp"] }
+sha2 = "0.10"
 thiserror = "2.0"
 tokio = { version = "1.45", features = ["rt"] }
 tracing = "0.1"
