--- a/nilcc-api/package.json
+++ b/nilcc-api/package.json
@@ -41,6 +41,7 @@
     "pg": "^8.16.0",
     "pino": "^9.7.0",
     "pino-pretty": "^13.0.0",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "temporal-polyfill": "^0.3.0",
     "tsx": "^4.19.4",
