--- a/crates/nilcc-artifacts/Cargo.toml
+++ b/crates/nilcc-artifacts/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1"
 hex = "0.4"
 futures-util = "0.3"
+thiserror = "2.0"
 tracing = "0.1"
 tokio = { version = "1.47", features = ["fs"] }
 reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
