--- a/cvm-agent/Cargo.toml
+++ b/cvm-agent/Cargo.toml
@@ -8,6 +8,7 @@ axum = { version = "0.8", features = ["json"] }
 axum-valid = "0.24"
 anyhow = "1"
 bollard = "0.19"
+chrono = "0.4"
 clap = { version = "4.5", features = ["derive", "string"] }
 futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
