--- a/nilcc-attester/Cargo.toml
+++ b/nilcc-attester/Cargo.toml
@@ -23,3 +23,5 @@ tower-http = { version = "0.6", features = ["cors"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 x509-parser = "0.18"
+
+attestation-report = { path = "../crates/attestation-report" }
