--- a/nilcc-verifier/Cargo.toml
+++ b/nilcc-verifier/Cargo.toml
@@ -18,6 +18,7 @@ thiserror = "2.0"
 tokio = { version = "1.45", features = ["rt"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
+url = "2.5"
 x509-parser = { version = "0.17.0", features = ["verify"] } 
 
 nilcc-artifacts = { path = "../crates/nilcc-artifacts" }
