--- a/cvm-agent/Cargo.toml
+++ b/cvm-agent/Cargo.toml
@@ -11,6 +11,7 @@ bollard = "0.19"
 chrono = "0.4"
 clap = { version = "4.5", features = ["derive", "string"] }
 futures = "0.3"
+regex = "1.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sysinfo = { version = "0.36", default-features = false, features = ["system", "disk"] }
