chore: bump caddy to 2.10.2 and use acme timeout

--- a/cvm-agent/resources/Caddyfile
+++ b/cvm-agent/resources/Caddyfile
@@ -4,16 +4,15 @@
     }
 }
 
-(ssl_config) {
+https://{NILCC_PROXY_HOSTNAME} {
     tls {
         protocols tls1.2 tls1.3
-        ca https://acme.zerossl.com/v2/DV90
-        eab {$CADDY_ACME_EAB_KEY_ID} {$CADDY_ACME_EAB_MAC_KEY}
+        issuer acme {
+            dir https://acme.zerossl.com/v2/DV90
+            eab {$CADDY_ACME_EAB_KEY_ID} {$CADDY_ACME_EAB_MAC_KEY}
+            timeout 5m
+        }
     }
-}
-
-https://{NILCC_PROXY_HOSTNAME} {
-    import ssl_config
 
     handle_path /nilcc/* {
       reverse_proxy http://nilcc-attester
