--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -7,8 +7,6 @@ on:
       - 'crates/cvm-agent-models/**'
     branches:
       - main
-    tags:
-      - 'nilcc-artifacts-*'
 
 permissions:
   id-token: write
@@ -65,21 +63,13 @@ jobs:
           echo "Metadata hash: ${hash}" >> $GITHUB_STEP_SUMMARY
 
       - name: Configure AWS credentials
-        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags')
+        if: github.ref == 'refs/heads/main'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: "arn:aws:iam::592920173613:role/github-runners-productionnilcc-ci-nilcc-bucket"
           aws-region: eu-west-1
 
       - name: Publish
-        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags')
-        run: |
-          if [[ "$GITHUB_REF" =~ ^refs/tags/nilcc-artifacts-.* ]]; then
-            # Remove the 'refs/tags/nilcc-artifacts-' prefix and keep the version
-            version=${GITHUB_REF:26}
-          else
-            # Or the short git hash otherwise.
-            version=$(git rev-parse --short HEAD)
-          fi
-          ./artifacts/upload.sh "${version}"
+        if: github.ref == 'refs/heads/main'
+        run: artifacts/upload.sh
 
