--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -28,6 +28,18 @@ jobs:
         with:
           submodules: 'true'
 
+      - name: Generate version
+        run: |
+          if [[ "$GITHUB_REF" =~ ^refs/tags/nilcc-artifacts-.* ]]; then
+            # Remove the 'refs/tags/nilcc-artifacts-' prefix and keep the version
+            version=${GITHUB_REF:26}
+          else
+            # Or the short git hash otherwise.
+            version=$(git rev-parse --short HEAD)
+          fi
+          echo "Building version ${NILCC_VERSION}" >> $GITHUB_STEP_SUMMARY
+          echo "NILCC_VERSION=${version}" >> $GITHUB_ENV
+
       - name: Install rust toolchain
         uses: dtolnay/rust-toolchain@1.85.0
 
@@ -68,12 +80,6 @@ jobs:
       - name: Publish
         if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags')
         run: |
-          if [[ "$GITHUB_REF" =~ ^refs/tags/nilcc-artifacts-.* ]]; then
-            # Remove the 'refs/tags/nilcc-artifacts-' prefix and keep the version
-            version=${GITHUB_REF:26}
-          else
-            # Or the short git hash otherwise.
-            version=$(git rev-parse --short HEAD)
-          fi
+          export NILCC_VERSION=${{ env.NILCC_VERSION }}
           ./artifacts/upload.sh "${version}"
 
