--- a/nilcc-verifier/Cargo.toml
+++ b/nilcc-verifier/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = "1.0"
 clap = { version = "4.5", features = ["derive", "string", "env"] }
 hex = { version = "0.4", features = ["serde"] }
 nom = "7.1"
-openssl = { version = "^0.10", features = ["vendored"] }
+openssl = { version = "^0.10" }
 reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
