--- a/nilcc-agent/Cargo.toml
+++ b/nilcc-agent/Cargo.toml
@@ -27,7 +27,7 @@ sqlx = { version = "0.8", features = ["chrono", "migrate", "runtime-tokio", "sql
 strum = { version = "0.27", features = ["derive"] }
 sysinfo = { version = "0.37"}
 tempfile = "3.23"
-tera = { version = "1", default-features = false }
+tinytemplate = "1.2"
 thiserror = "2"
 tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "net", "process", "time", "fs", "signal"] }
 tokio-stream = "0.1"
