--- a/crates/nilcc-artifacts/Cargo.toml
+++ b/crates/nilcc-artifacts/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2024"
 hex = "0.4"
 futures-util = "0.3"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 serde_with = { version = "3.14", features = ["hex"] }
+sha2 = "0.10"
 thiserror = "2.0"
 tracing = "0.1"
 tokio = { version = "1.47", features = ["fs"] }
