--- a/.github/workflows/core-artifacts.yml
+++ b/.github/workflows/core-artifacts.yml
@@ -19,7 +19,7 @@ defaults:
 jobs:
   build:
     name: Build
-    runs-on: [ "nilcc-ci" ]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -37,6 +37,10 @@ jobs:
           fi
           echo "Building version ${version}"
           echo "NILCC_VERSION=${version}" >> $GITHUB_ENV
+
+      - name: Install dependencies
+        run: |
+          sudo apt install -y jq squashfs-tools cloud-image-utils
 
       - name: Build guest kernel
         run: artifacts/core/kernel/build.sh guest
