--- a/crates/nilcc-artifacts/Cargo.toml
+++ b/crates/nilcc-artifacts/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
 hex = "0.4"
 futures-util = "0.3"
 serde = { version = "1.0", features = ["derive"] }
