--- a/crates/attestation-verification/Cargo.toml
+++ b/crates/attestation-verification/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0"
 async-trait = "0.1"
-clap = { version = "4.5", features = ["derive", "string", "env"] }
+clap = { version = "4.5", features = ["derive"] }
 hex = { version = "0.4", features = ["serde"] }
 nom = "7.1"
 openssl = { version = "^0.10" }
