--- a/crates/attestation-report/Cargo.toml
+++ b/crates/attestation-report/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2024"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_with = { version = "3.14", features = ["hex"] }
-sev = { version = "7.1", default-features = false, features = ["snp"], optional = true }
+# sev = { version = "7.1", default-features = false, features = ["snp"], optional = true }
+sev = { git = "https://github.com/virtee/sev", branch = "main", default-features = false, features = ["snp"], optional = true }
 
 [features]
 default = ["sev"]
