--- a/crates/nilcc-agent-models/Cargo.toml
+++ b/crates/nilcc-agent-models/Cargo.toml
@@ -8,6 +8,6 @@ convert_case = "0.8"
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 regex = "1.11"
-serde_with = { version = "3.14", features = ["base64"] }
+serde_with = { version = "3.14", features = ["base64", "hex"] }
 uuid = { version = "1.18", features = ["serde"] }
 validator = { version = "0.20", features = ["derive"] }
