--- a/nilcc-agent-cli/Cargo.toml
+++ b/nilcc-agent-cli/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2024"
 ansi_term = "0.12"
 anyhow = "1"
 clap = { version = "4.5", features = ["derive", "env"] }
+hex = "0.4"
 serde = "1.0"
 serde_json = "1.0"
+sha3 = "0.10"
 reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
 thiserror = "2.0"
 uuid = { version = "1.18", features = ["v4"] }
