--- a/crates/cvm-agent-models/Cargo.toml
+++ b/crates/cvm-agent-models/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2024"
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_with = { version = "3.16", features = ["hex"] }
 validator = { version = "0.20", features = ["derive"] }
