--- a/cvm-agent/Cargo.toml
+++ b/cvm-agent/Cargo.toml
@@ -17,6 +17,7 @@ clap = { version = "4.5", features = ["derive", "string"] }
 futures = "0.3"
 regex = "1.11"
 num_cpus = "1.17"
+rand = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 serde_with = { version = "3.16", features = ["hex"] }
 serde_json = "1.0"
