--- a/heartbeat-funder/Cargo.toml
+++ b/heartbeat-funder/Cargo.toml
@@ -9,9 +9,13 @@ alloy-provider = { version = "1.1", features = ["ws"] }
 anyhow = "1"
 clap = { version =  "4.5", features = ["derive", "env"] }
 config = { version = "0.15", default-features = false, features = ["yaml"] }
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 rustls = { version = "0.23", features = ["ring"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_with = "3.16"
+thiserror = "2"
 tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "time", "signal"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
+
+nilcc-agent-models = { path = "../crates/nilcc-agent-models" }
