--- a/heartbeat-funder/Cargo.toml
+++ b/heartbeat-funder/Cargo.toml
@@ -17,5 +17,6 @@ thiserror = "2"
 tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "time", "signal"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
+uuid = "1.19"
 
 nilcc-agent-models = { path = "../crates/nilcc-agent-models" }
